updated logo and favicon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:type" content="video.movie" />
   <meta property="og:url" content="https://shuffledrop.io/" />
 
-  <link rel="icon" href="icon.jpg">
+  <link rel="icon" href="favicon.jpg">
   <meta name="twitter:title" content="Claim FREE 500$ SHUFFLE token Airdrop, listing on Binance Launchpool soon">
   <meta name="twitter:description" content="Get 100 SHUFFLE now!">
 
@@ -54,7 +54,7 @@
   <main class="main">
     <header class="navbar navbar-sticky sticky-bg-color--dark navbar-expand-lg navbar-dark">
       <div class="container-fluid position-relative">
-        <img src="/images1.svg" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
+        <img src="/logo.jpg" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
           data-toggle="navbarToggler" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -222,7 +222,7 @@
           </div>
           <div class="col-12 col-lg-5 col-xl-6 mb-6 mb-lg-0 text-center">
             <picture class="about__image reveal w-75">
-              <img src="/IMG23561.svg" class="img-fluid w-100" />
+              <img src="/logo.jpg" class="img-fluid w-100" />
             </picture>
           </div>
         </div>
