--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main class="main">
     <header class="navbar navbar-sticky sticky-bg-color--dark navbar-expand-lg navbar-dark">
       <div class="container-fluid position-relative">
-        <img src="/logo.jpg" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
+        <img src="/Frame 40.svg" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
           data-toggle="navbarToggler" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="col-12 col-md-10 col-lg-8 px-lg-0 mx-auto mb-3 mb-lg-0 mt-8 mt-lg-0 text-center z-index2">
             <div class="hero-content">
-              <img src="/images1.svg" height="200" width="270">
+              <img src="/Frame 40.svg" height="200" width="270">
               <p class="hero__description mb-3 mb-lg-5 mb-md-6">
                 Welcome! Shuffle aims to unite games and gamers from various blockchain networks on its
                 cross-chain token platform, establishing a united Web3 gaming ecosystem. Shuffle enables
@@ -222,7 +222,7 @@
           </div>
           <div class="col-12 col-lg-5 col-xl-6 mb-6 mb-lg-0 text-center">
             <picture class="about__image reveal w-75">
-              <img src="/logo.jpg" class="img-fluid w-100" />
+              <img src="/IMG23561.svg" class="img-fluid w-100" />
             </picture>
           </div>
         </div>
