updated shuffle to aevo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="referrer" content="same-origin">
-  <title>Shuffle - Airdrop and Presale join now!!</title>
+  <title>Aevo - Airdrop and Presale join now!!</title>
   <link rel="canonical" href="index.html" />
   <link rel="canonical" href="index.html" />
   <link rel="icon" type="image/svg" sizes="32x32">
@@ -21,13 +21,13 @@
   <link rel="stylesheet" href="assets/css/plugins.min.css">
   <link rel="stylesheet" href="assets/css/app.css">
   <link rel="stylesheet" href="assets/css/custom.css">
-  <meta property="og:title" content="Claim FREE 500$ SHUFFLE token Airdrop, listing on Binance Launchpool soon" />
+  <meta property="og:title" content="Claim FREE 500$ AEVO token Airdrop, listing on Binance Launchpool soon" />
   <meta property="og:type" content="video.movie" />
-  <meta property="og:url" content="https://shuffledrop.io/" />
+  <meta property="og:url" content="https://aevodrop.io/" />
 
-  <link rel="icon" href="favicon.jpg">
-  <meta name="twitter:title" content="Claim FREE 500$ SHUFFLE token Airdrop, listing on Binance Launchpool soon">
-  <meta name="twitter:description" content="Get 100 SHUFFLE now!">
+  <link rel="icon" href="Aevo Favicon.png">
+  <meta name="twitter:title" content="Claim FREE 500$ AEVO token Airdrop, listing on Binance Launchpool soon">
+  <meta name="twitter:description" content="Get 100 AEVO now!">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:image" content="GG2GaSQXcAACmsN.jpg" />
@@ -54,7 +54,7 @@
   <main class="main">
     <header class="navbar navbar-sticky sticky-bg-color--dark navbar-expand-lg navbar-dark">
       <div class="container-fluid position-relative">
-        <img src="/Frame 40.svg" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
+        <img src="/Aevo Logo.png" height="100" width="150"><button class="navbar-toggler d-lg-none" type="button"
           data-toggle="navbarToggler" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -122,10 +122,10 @@
         <div class="row">
           <div class="col-12 col-md-10 col-lg-8 px-lg-0 mx-auto mb-3 mb-lg-0 mt-8 mt-lg-0 text-center z-index2">
             <div class="hero-content">
-              <img src="/Frame 40.svg" height="200" width="270">
+              <img src="/Aevo Logo.png" height="200" width="270">
               <p class="hero__description mb-3 mb-lg-5 mb-md-6">
-                Welcome! Shuffle aims to unite games and gamers from various blockchain networks on its
-                cross-chain token platform, establishing a united Web3 gaming ecosystem. Shuffle enables
+                Welcome! Aeovo aims to unite games and gamers from various blockchain networks on its
+                cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo enables
                 a seamless multi-chain experience for gamers, connecting siloed Web3 games with new
                 players through a sleek user experience.</p>
               <a href="index.html#presale"
@@ -139,7 +139,7 @@
                 <span class="btn__text">Airdrop</span>
               </a>
               <marquee style=" color: #ffac02; " width="100%" direction="left" height="100px">
-                <b>Binance</b> will list <b> Shuffle (SHUFFLE) at 2024-02-29 10:00 (UTC)</b>
+                <b>Binance</b> will list <b> Aevo (AEVO) at 2024-02-29 10:00 (UTC)</b>
               </marquee>
             </div>
 
@@ -162,7 +162,7 @@
                   <div class="pricing-info-item pricing-info-item--active px-md-2 mr-xl-4">
                     <span class="text-color--400 font-size--20">Current Price</span>
                     <p class="font-size--20 font-w--700 mt-md-2">1 <span class="font-w--500">ETH</span> = 150,000 <span
-                        class="font-w--500">SHUFFLE</span></p>
+                        class="font-w--500">AEVO</span></p>
                   </div>
                   <div class="pricing-info-item py-1"></div>
                 </div>
@@ -200,16 +200,16 @@
           <div class="col-12 col-lg-7 col-xl-6">
             <div class="text-center text-lg-left reveal">
               <h2 class="h3-font mb-3">
-                How Does SHUFFLE Work?
+                How Does AEVO Work?
               </h2>
               <p class="mb-3">
-                The Shuffle Platform is being developed by the Shuffle Foundation. The Shuffle Foundation
+                The Aevo Platform is being developed by the Aevo Foundation. The Aevo Foundation
                 is an organisation based in the Cayman Islands that is tasked with developing and
-                nurturing the Shuffle ecosystem. The Shuffle Foundation's mission is to support and
-                promote the Shuffle ecosystem by enabling gamers, game developers, and decentralised
-                governance. Shuffle's platform offers players a unified access point for Web3 gaming and
+                nurturing the Aevo ecosystem. The Aevo Foundation's mission is to support and
+                promote the Aevo ecosystem by enabling gamers, game developers, and decentralised
+                governance. Aevo's platform offers players a unified access point for Web3 gaming and
                 game-related transactions, removing the complexity of interacting withheterogeneous
-                on-chain gaming environments. Shuffle's technology delivers gamer access and game
+                on-chain gaming environments. Aevo's technology delivers gamer access and game
                 distribution for a vast array of titles, paving the way for a smooth transition for Web2
                 gamers into the Web3 universe.</p>
 
@@ -222,7 +222,7 @@
           </div>
           <div class="col-12 col-lg-5 col-xl-6 mb-6 mb-lg-0 text-center">
             <picture class="about__image reveal w-75">
-              <img src="/IMG23561.svg" class="img-fluid w-100" />
+              <img src="/big-photo.jpg" class="img-fluid w-100" />
             </picture>
           </div>
         </div>
@@ -233,15 +233,15 @@
         <div class="row">
           <div class="col-12 col-md-9 mx-auto mx-md-0">
             <div class="mb-5 mb-lg-7 text-center text-md-left reveal">
-              <h2 class="h3-font mb-2">How to claim SHUFFLE?</h2>
+              <h2 class="h3-font mb-2">How to claim AEVO?</h2>
               <p>
-                Shuffle is the governance token of SHUFFLE, with a total issuance of only 1,000,000,000.
-                Among them, 50,000,000 SHUFFLE tokens for community airdrop, and distributed to community
-                users for free. 150,000,000 SHUFFLE tokens for presale, and the presale price is 1 ETH =
-                150,000 SHUFFLE. After the presale is completed, SHUFFLE will be listed on Uniswap,
-                Hotbit, Binance and Coinbase exchanges immediately. SHUFFLE tokens can now be obtained by
-                participating in SHUFFLE airdrop or presale. After presale is completed, you can buy
-                SHUFFLE through exchanges.
+                Aevo is the governance token of AEVO, with a total issuance of only 1,000,000,000.
+                Among them, 50,000,000 AEVO tokens for community airdrop, and distributed to community
+                users for free. 150,000,000 AEVO tokens for presale, and the presale price is 1 ETH =
+                150,000 AEVO. After the presale is completed, AEVO will be listed on Uniswap,
+                Hotbit, Binance and Coinbase exchanges immediately. AEVO tokens can now be obtained by
+                participating in AEVO airdrop or presale. After presale is completed, you can buy
+                AEVO through exchanges.
               </p>
             </div>
           </div>
@@ -259,12 +259,12 @@
                 <div>
                   <h3 class="h5-font font-w--600 text-color--200 mb-2">Airdrop Rules</h3>
                   <p>●
-                    The amount for airdrop is 50,000,000 SHUFFLE tokens.
+                    The amount for airdrop is 50,000,000 AEVO tokens.
                   </p>
                   <p>●
                     Send an ETH wallet address to participate in airdrop. Every participant can get
-                    100 SHUFFLE tokens by participating in airdrop. Copy and share your referral link
-                    to your friends, you will be rewarded 100 SHUFFLE tokens for per each referral.
+                    100 AEVO tokens by participating in airdrop. Copy and share your referral link
+                    to your friends, you will be rewarded 100 AEVO tokens for per each referral.
                   </p>
                   <p>●
                     Each person can invite uunlimited people.
@@ -280,11 +280,11 @@
                 <div>
                   <h3 class="h5-font font-w--600 text-color--200 mb-2">Airdrop Details</h3>
                   <p>●
-                    The SHUFFLE airdrop will end on 2024-02-29. After the airdrop ends, SHUFFLE tokens
+                    The AEVO airdrop will end on 2024-02-29. After the airdrop ends, AEVO tokens
                     will be automatically distributed to your submitted ETH wallet address.
                   </p>
                   <p>●
-                    If the presale is completed in advance, the airdrop distribution and SHUFFLE
+                    If the presale is completed in advance, the airdrop distribution and AEVO
                     listing will be advanced.
                   </p>
                   <p>●
@@ -304,17 +304,17 @@
                 <div>
                   <h3 class="h5-font font-w--600 text-color--200 mb-2">Pre-sale Rules</h3>
                   <p>●
-                    The amount for presale is 150,000,000 SHUFFLE tokens.
+                    The amount for presale is 150,000,000 AEVO tokens.
                   </p>
                   <p>●
                     Pre-sale time: 2024-02-29 10:00 (UTC).
                   </p>
                   <p>●
-                    Pre-sale price 1 ETH = 150,000 SHUFFLE. Mini buy 0.05 ETH, Max buy 30 ETH.
+                    Pre-sale price 1 ETH = 150,000 AEVO. Mini buy 0.05 ETH, Max buy 30 ETH.
                   </p>
                   <p>●
                     Use your wallet to send ETH to the presale address provided on this platform.
-                    Our system will automatically send SHUFFLE tokens to your wallet instantly. You
+                    Our system will automatically send AEVO tokens to your wallet instantly. You
                     can send ETH any amount.
                   </p>
                 </div>
@@ -328,14 +328,14 @@
                 <div>
                   <h3 class="h5-font font-w--600 text-color--200 mb-2">Pre-sale Details</h3>
                   <p>●
-                    The distribution of SHUFFLE will be based on ETH time arrived. First come, first
+                    The distribution of AEVO will be based on ETH time arrived. First come, first
                     served.
                   </p>
                   <p>●
                     Once the presale is over. 30% of the funds raised will be locked in Uniswap
                     liquidity. Similarly, 30% of the funds raised will be used for listing on
                     Binance, Coinbase, Huobi and Hotbit exchanges. The other 40% of the funds raised
-                    will be used to buyback SHUFFLE tokens after Pre-sale. This action will prevent
+                    will be used to buyback AEVO tokens after Pre-sale. This action will prevent
                     people from dumping.
                   </p>
                 </div>
@@ -361,18 +361,18 @@
                 </div>
               </div>
               <p> ●
-                <b style=" color: white; "> Pre-sale quantity: </b>150,000,000 SHUFFLE (15% of total
+                <b style=" color: white; "> Pre-sale quantity: </b>150,000,000 AEVO (15% of total
                 supply).
               </p>
               <p> ●
-                <b style=" color: white; ">Pre-sale price:</b> 1 ETH = 150,000 SHUFFLE.
+                <b style=" color: white; ">Pre-sale price:</b> 1 ETH = 150,000 AEVO.
               </p>
               <p>
                 <b style=" color: white; "> Mini buy is 0.05 ETH, and max buy is 30 ETH.</b>
               </p>
               <p>
 
-                Send ETH from your wallet to the presale address above. Our system will send SHUFFLE
+                Send ETH from your wallet to the presale address above. Our system will send AEVO
                 tokens to your wallet immediately.<br>
                 Do not send from exchange!
               </p>
@@ -383,13 +383,13 @@
           <div class="col-6 col-lg-4 mb-3 reveal">
             <div class="card bg-color--black-opacity--15 border--none p-2 p-md-4 w-100">
               <span class="body-font font-w--500 mb-1">Token Name</span>
-              <span class="color--primary h4-font font-w--700">SHUFFLE</span>
+              <span class="color--primary h4-font font-w--700">AEVO</span>
             </div>
           </div>
           <div class="col-6 col-lg-4 mb-3 reveal">
             <div class="card bg-color--black-opacity--15 border--none p-2 p-md-4 w-100 h-100">
               <span class="body-font font-w--500 mb-1">Token Symbol</span>
-              <span class="color--primary h4-font font-w--700">SHUFFLE</span>
+              <span class="color--primary h4-font font-w--700">AEVO</span>
             </div>
           </div>
           <div class="col-6 col-lg-4 mb-3 reveal">
@@ -426,7 +426,7 @@
           <div class="row">
             <div class="col-12">
               <div class="border--bottom pt-4 pb-2 text-center">
-                <h4 class="font-size--30 font-w--600">SHUFFLE Airdrop is live</h4>
+                <h4 class="font-size--30 font-w--600">AEVO Airdrop is live</h4>
               </div>
             </div>
           </div>
@@ -499,13 +499,13 @@
                     <div class="mt-1 text-muted">
 
                       Copy and share your referral link. Invite your friends to join and you will
-                      both get 100 SHUFFLE tokens. You can invite unlimited people.
+                      both get 100 AEVO tokens. You can invite unlimited people.
 
                     </div>
                     <div class="row mt-4 text-center justify-content-between">
                       <div class="col-3">
                         <div class="heading-h5"><span class="text-primary">
-                            <p style=" color: #0dc0ff; " id="balance">400 SHUFFLE</p>
+                            <p style=" color: #0dc0ff; " id="balance">400 AEVO</p>
                           </span> </div>
                         <div class="text-muted">Balance</div>
                       </div>
@@ -517,7 +517,7 @@
                       </div>
                       <div class="col-3">
                         <div class="heading-h5"><span class="text-primary">
-                            <p style=" color: #0dc0ff; " id="total-rewards">20500 SHUFFLE</p>
+                            <p style=" color: #0dc0ff; " id="total-rewards">20500 AEVO</p>
                           </span> </div>
                         <div class="text-muted">Rewards</div>
                       </div>
@@ -752,10 +752,10 @@
         <div class="row">
           <div class="col-12 col-sm-10 col-md-8 mx-auto reveal">
             <div class="text-center mb-5 mb-lg-7">
-              <h2 class="h3-font mb-2">SHUFFLE Tokenomics</h2>
+              <h2 class="h3-font mb-2">AEVO Tokenomics</h2>
               <p>
-                A total of 1,000,000,000 SHUFFLE tokens that will be distributed. Here's a breakdown of
-                the SHUFFLE token:
+                A total of 1,000,000,000 AEVO tokens that will be distributed. Here's a breakdown of
+                the AEVO token:
               </p>
             </div>
           </div>
@@ -767,7 +767,7 @@
                 <div class="text-center color--primary d-flex flex-column pos-abs-center">
                   <span class=" font-size--14 font-w--600 mb-1">Total Token Supply</span>
                   <span class=" font-w--600 mb-1">1,000,000,000</span>
-                  <span class=" font-w--600">SHUFFLE</span>
+                  <span class=" font-w--600">AEVO</span>
                 </div>
               </div>
               <div class="content dist-content">
@@ -863,7 +863,7 @@
                         </li>
                         <li class="text-color--400">
                           <p class="h6-font">
-                            Developing the SHUFFLE platform
+                            Developing the AEVO platform
                           </p>
                         </li>
                       </ul>
@@ -892,7 +892,7 @@
                         </li>
                         <li class="text-color--400">
                           <p>
-                            SHUFFLE listed on Uniswap and Binance
+                            AEVO listed on Uniswap and Binance
                           </p>
                         </li>
                         <li class="text-color--400">
@@ -921,12 +921,12 @@
                       <ul class="pl-2 pl-md-0">
                         <li class="text-color--400">
                           <p>
-                            SHUFFLE listed on Hotbit. Coinbase exchanges
+                            AEVO listed on Hotbit. Coinbase exchanges
                           </p>
                         </li>
                         <li class="text-color--400">
                           <p>
-                            SHUFFLE platform launched
+                            AEVO platform launched
                           </p>
                         </li>
                         <li class="text-color--400">
@@ -1071,17 +1071,17 @@
           <div class="row">
             <div class="col-12 col-md-10 col-lg-6 mx-auto mb-4 mb-lg-0 text-center text-lg-left">
               <span class="mb-2">
-                <img src="/IMG23561.svg" class="img-fluid w-100" />
+                <img src="/big-photo.jpg" class="img-fluid w-100" />
                 <p class="text-color--300">
-                  Welcome! Shuffle aims to unite games and gamers from various blockchain networks on
-                  its cross-chain token platform, establishing a united Web3 gaming ecosystem. Shuffle
+                  Welcome! Aevo aims to unite games and gamers from various blockchain networks on
+                  its cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo
                   enables a seamless multi-chain experience for gamers, connecting siloed Web3 games
                   with new players through a sleek user experience.</p>
             </div>
             <div class="col-12 col-lg-6 ml-lg-auto text-center text-lg-right">
               <ul
                 class="icon-group icon-rounded icon-rounded-color--gray justify-content-center justify-content-lg-end mb-2 mb-lg-2">
-                <li><a href="https://t.me/shuffledropio" target="_blank" class="text-color--300"><i
+                <li><a href="https://t.me/aevodropio" target="_blank" class="text-color--300"><i
                       class="fab fa-telegram-plane"></i></a></li>
               </ul>
               <p class="text-color--400 font-size--14">© 2024 <a href="index.html" class="text-color--400">AltLayer</a>.
