--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:type" content="video.movie" />
   <meta property="og:url" content="https://aevodrop.io/" />
 
-  <link rel="icon" href="Aevo Favicon.png">
+  <link rel="icon" href="big-photo.jpg">
   <meta name="twitter:title" content="Claim FREE 500$ AEVO token Airdrop, listing on Binance Launchpool soon">
   <meta name="twitter:description" content="Get 100 AEVO now!">
 
