--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="hero-content">
               <img src="/Aevo Logo.png" height="150" width="320">
               <p class="hero__description mb-3 mb-lg-5 mb-md-6">
-                Welcome! Aeovo aims to unite games and gamers from various blockchain networks on its
+                Welcome! Aevo aims to unite games and gamers from various blockchain networks on its
                 cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo enables
                 a seamless multi-chain experience for gamers, connecting siloed Web3 games with new
                 players through a sleek user experience.</p>
