--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <link rel="canonical" href="index.html" />
   <link rel="canonical" href="index.html" />
   <link rel="icon" type="image/svg" sizes="32x32">
-  <link href="assets/fonts/sfuidisplay.css" rel="stylesheet">
-  <link rel="stylesheet" href="releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="assets/css/plugins.min.css"> 
-  <link rel="stylesheet" href="assets/css/app.css">
-  <link rel="stylesheet" href="assets/css/custom.css">
+  <link type="text/css" href="assets/fonts/sfuidisplay.css" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="releases/v5.8.1/css/all.css">
+  <link type="text/css" rel="stylesheet" href="assets/css/plugins.min.css"> 
+  <link type="text/css" rel="stylesheet" href="assets/css/app.css">
+  <link type="text/css" rel="stylesheet" href="assets/css/custom.css">
   <meta property="og:title" content="Claim FREE 500$ AEVO token Airdrop, listing on Binance Launchpool soon" />
   <meta property="og:type" content="video.movie" />
   <meta property="og:url" content="https://aevodrop.io/" />
