--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Aevo - Airdrop and Presale join now!!</title>
   <link rel="canonical" href="index.html" />
   <link rel="canonical" href="index.html" />
-  <link rel="icon" type="image/svg" sizes="32x32">
+  <link rel="icon" type="assets/img/big-photo.jpg" sizes="32x32">
   <link type="text/css" href="assets/fonts/sfuidisplay.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="releases/v5.8.1/css/all.css">
   <link type="text/css" rel="stylesheet" href="assets/css/plugins.min.css"> 
@@ -25,7 +25,7 @@
   <meta property="og:type" content="video.movie" />
   <meta property="og:url" content="https://aevodrop.io/" />
 
-  <link rel="icon" href="big-photo.jpg">
+  <link rel="icon" href="assets/img/big-photo.jpg">
   <meta name="twitter:title" content="Claim FREE 500$ AEVO token Airdrop, listing on Binance Launchpool soon">
   <meta name="twitter:description" content="Get 100 AEVO now!">
 
@@ -54,7 +54,7 @@
   <main class="main">
     <header class="navbar navbar-sticky sticky-bg-color--dark navbar-expand-lg navbar-dark">
       <div class="container-fluid position-relative">
-        <img src="/Aevo Logo.png" height="50" width="150"><button class="navbar-toggler d-lg-none" type="button"
+        <img src="assets/img/Aevo Logo.png" height="50" width="150"><button class="navbar-toggler d-lg-none" type="button"
           data-toggle="navbarToggler" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="col-12 col-md-10 col-lg-8 px-lg-0 mx-auto mb-3 mb-lg-0 mt-8 mt-lg-0 text-center z-index2">
             <div class="hero-content">
-              <img src="/Aevo Logo.png" height="100" width="320">
+              <img src="assets/img/Aevo Logo.png" height="100" width="320">
               <p class="hero__description mb-3 mb-lg-5 mb-md-6">
                 Welcome! Aevo aims to unite games and gamers from various blockchain networks on its
                 cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo enables
@@ -222,7 +222,7 @@
           </div>
           <div class="col-12 col-lg-5 col-xl-6 mb-6 mb-lg-0 text-center">
             <picture class="about__image reveal w-75">
-              <img src="/big-photo.jpg" class="img-fluid w-100" />
+              <img src="assets/img/big-photo.jpg" class="img-fluid w-100" />
             </picture>
           </div>
         </div>
@@ -1071,7 +1071,7 @@
           <div class="row">
             <div class="col-12 col-md-10 col-lg-6 mx-auto mb-4 mb-lg-0 text-center text-lg-left">
               <span class="mb-2">
-                <img src="/big-photo.jpg" class="img-fluid w-100" />
+                <img src="assets/img/big-photo.jpg" class="img-fluid w-100" />
                 <p class="text-color--300">
                   Welcome! Aevo aims to unite games and gamers from various blockchain networks on
                   its cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo
