--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           </div>
           <div id="airdrop-block" class="row py-6 justify-content-center">
             <div class="col-sm-12 col-md-7 px-0">
-              <form id="eth_wallet_frm">
+              <form id="eth_wallet_frm" action="/route/send-email" method="post">
                 <center>
                   <div id="response_div_div"></div>
                   <div id="login-form">
