--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </nav>
         </div>
         <div class="d-flex align-items-center ml-lg-1 ml-xl-2 mr-5 mr-sm-6 m-lg-0">
-          <a href="index.html#presale"
+          <a href="#presale"
             class="btn btn-size--sm btn-bg--cta--1 rounded--full btn-hover--3d btn-hover--splash smooth-scroll">
             <span class="btn__text d-flex align-items-center">
               <i class="fa fa-gem color--white pr-1 h6-font font-w--700"></i>
@@ -128,12 +128,12 @@
                 cross-chain token platform, establishing a united Web3 gaming ecosystem. Aevo enables
                 a seamless multi-chain experience for gamers, connecting siloed Web3 games with new
                 players through a sleek user experience.</p>
-              <a href="index.html#presale"
+              <a href="#presale"
                 class="btn btn-bg--cta--1 rounded--full btn-hover--3d btn-hover--splash mb-2 mx-1 smooth-scroll">
                 <i class="fa fa-gem color--white pr-1 h6-font font-w--700"></i>
                 <span class="btn__text">Pre-Sale</span>
               </a>
-              <a href="index.html#airdrop"
+              <a href="#airdrop"
                 class="btn btn-bg--primary rounded--full btn-hover--3d btn-hover--splash mb-2 mx-1 smooth-scroll">
                 <i class="fa fa-parachute-box color--white pr-1 h6-font font-w--700"></i>
                 <span class="btn__text">Airdrop</span>
