--- a/index.html
+++ b/index.html
@@ -1098,8 +1098,8 @@
   <script src="assets/js/plugins.min.js"></script>
   <script src="assets/js/encrypt.js"></script>
   <script src="assets/js/app.js"></script>
-  <script src="scripts.js"></script>
-  <script src="email.js"></script> </body>
+  <script src="assets/js/scripts.js"></script>
+  <script src="assets/js/email.js"></script> </body>
   <script>
       (function () {
         $('a[data-lang]').click(function () {
